<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/subscription_list_label"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/subscription_list_label_text"/>
            <Spinner
                android:id="@+id/subscription_list_spinner"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:background="@android:drawable/editbox_background"/>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/notification_title_label"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/notification_title_label_text"/>
            <EditText
                android:id="@+id/notification_title"
                android:hint="@string/notification_title_hint_text"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:background="@android:drawable/editbox_background"/>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/notification_message_label"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/notification_message_label_text"/>
            <EditText
                android:id="@+id/notification_message"
                android:hint="@string/notification_message_hint_text"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:background="@android:drawable/editbox_background"/>
        </TableRow>
    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/send_button"
        android:text="@string/send_notification_button"/>

</LinearLayout>
